feat: add function in generate password button

--- a/src/index.css
+++ b/src/index.css
@@ -5,16 +5,17 @@
 
 @layer utilities {
   .slider {
-    @apply w-[100%] mt-6 appearance-none h-[0.3rem] bg-dark-blue;
+    @apply w-[100%] mt-6 appearance-none h-[0.32rem] bg-dark-blue;
   }
   .slider::-webkit-slider-thumb {
-    @apply appearance-none accent-neon-green h-[18px] w-[18px] bg-white rounded-full cursor-pointer hover:bg-dark-blue hover:border-2 border-neon-green;
+    @apply appearance-none ring-2 ring-white h-[19px] w-[19px] bg-white rounded-full cursor-pointer hover:bg-dark-blue hover:ring-neon-green transition duration-150;
   }
+
   .checkbox {
     @apply w-[0.5rem] h-[0.5rem] border-2 border-white p-[0.4rem] appearance-none relative cursor-pointer;
   }
   .checkbox:checked {
-    @apply bg-neon-green border-neon-green before:content-checkIcon before:absolute before:top-[-3px] before:left-[0.5px] text-[11px];
+    @apply bg-neon-green border-neon-green before:content-checkIcon before:absolute before:top-[-2.5px] before:left-[0.1px] text-[11px];
   }
 }
 
