--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   }
 
   .checkbox {
-    @apply w-[0.5rem] h-[0.5rem] border-2 border-white p-[0.4rem] appearance-none relative cursor-pointer;
+    @apply w-[0.5rem] h-[0.5rem] border-2 border-white p-[0.4rem] appearance-none relative cursor-pointer transition duration-100 ease-in;
   }
   .checkbox:checked {
     @apply bg-neon-green border-neon-green before:content-checkIcon before:absolute before:top-[-2.5px] before:left-[0.1px] text-[11px];
